# powerline-rs

./: Cargo.toml  README.md
src/: cli.rs  format.rs  main.rs  module.rs  theme.rs
src/segments/: mod.rs  segment_cwd.rs  segment_git.rs  segment_host.rs  segment_jobs.rs  segment_nix.rs  segment_perms.rs  segment_ps.rs  segment_root.rs  segment_ssh.rs  segment_time.rs  segment_user.rs  segment_virtualenv.rs
