[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "powerline-shell rewritten in Rust. Inspired by powerline-go."
license-file = "LICENSE"
name = "powerline-rs"
readme = "README.md"
repository = "https://github.com/jD91mZM2/powerline-rs"
version = "0.1.9"

[build-dependencies]
clap = "2.33.0"

[dependencies]
clap = "2.33.0"
dirs = "2.0.1"
time = "0.1.42"

[dependencies.chrono]
optional = true
version = "0.4.6"

[dependencies.flame]
optional = true
version = "0.2.2"

[dependencies.git2]
optional = true
version = "0.9.1"

[dependencies.users]
optional = true
version = "0.8.0"

[features]
default = ["chrono", "git2", "users"]
